# PatapimOS

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  dns.rs  executor.rs  fs.rs  gdt.rs  interrupts.rs  linker.rs  main.rs  memory.rs  network.rs  pasm.rs  pci.rs  shell.rs  vga_buffer.rs
