[package]
name = "PatapimOS"
version = "0.3.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
x86_64 = "0.15"
pic8259 = "0.11"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"
uart_16550 = "0.3"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
